# mandelbrot-simd

./: .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  LICENCE
cuda/: CMakeLists.txt  mandelbrot-cuda.h  mandelbrot.cu
include/: mandelbrot-avx512.h  mandelbrot-neon.h  mandelbrot.h  utils.h
src/: main.c  mandelbrot-avx512.c  mandelbrot-neon.c  mandelbrot.c
